--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-    background-color: gray;
     font-family: arial, sans-serif;
     font-size: 1.3rem;
     overflow-x: hidden;
@@ -7,6 +6,8 @@ body {
     padding: 0;
     width: 100%;
     height: 100vh;
+    background-image: url("images/lake.jpg");
+    background-color: gray;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -29,5 +30,9 @@ form {
 
 input {
     margin: 10px;
+}
+
+#fahrenheitInput, #celsiusInput {
+    opacity: 0;
 }
 
