--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     width: 100%;
     height: 100vh;
-    background-image: url("images/lake.jpg");
+    background-image: url("../images/lake.jpg");
     background-color: gray;
     background-repeat: no-repeat;
     background-position: center;
@@ -17,15 +17,15 @@ form {
     background-color: white;
     margin: 0 auto;
     text-align: center;
-    height: 200px;
+    max-height: 400px;
     padding-top: 20px;
     padding-bottom: 50px;
-    width: 800px;
+    width: 40%;
     border-radius: 25px;
     border: solid 8px rgb(213, 213, 213);
     opacity: 0.93;
     position: relative;
-    top: 300px;
+    top: 350px;
 }
 
 input {
