--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,13 @@ form {
     border-radius: 25px;
     border: solid 8px rgb(213, 213, 213);
     opacity: 0.93;
-    position: relative;
-    top: 350px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 input {
     margin: 10px;
 }
-
-#fahrenheitInput, #celsiusInput {
-    opacity: 0;
-}
-
